description section ready to go: added tree's svg + scss

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,4 +7,4 @@ style: center
 
 ![codeweek](img/codeweek-logo.png)
 
-### Dezembro 2017 @ DI, Universidade do Minho
+### Dezembro 2017 @ Universidade do Minho
