--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,6 +5,6 @@ color: white
 style: center
 ---
 
-![codeweek](img/codeweek-logo.png)
+![dezembro_solidario](img/logo.png)
 
 ### Dezembro 2017 @ Universidade do Minho
