--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -7,15 +7,21 @@ fa-icon: users
 
 <div class="row partners">
   <div class="col s12 partner valign">
-    <a href="http://subvisual.co" target="blank"><img src="img/contacts/subvisual.png"/></a>
+    <a href="http://subvisual.co" target="blank"><img src="img/org/cesium.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://eurotux.com" target="blank"><img src="img/contacts/eurotux.png"/></a>
+    <a href="http://eurotux.com" target="blank"><img src="img/org/aiesec.png"/></a>
+  </div>
+  <div class="col s12 partner full-width valign">
+    <a href="http://eurotux.com" target="blank"><img src="img/org/NAMecUM.png"/></a>
+  </div>
+  <div class="col s12 partner full-width valign">
+    <a href="http://eurotux.com" target="blank"><img src="img/org/NEEGIUM.png"/></a>
   </div>
   <div class="col s12 partner valign">
-    <a href="https://www.facebook.com/padariaepastelaria.madrugadora" target="blank">
-      <h4> Padaria e Pastelaria </h4>
-      <h1> Madrugadora </h1>
-    </a>
+    <a href="http://eurotux.com" target="blank"><img src="img/org/netium.png"/></a>
+  </div>
+  <div class="col s12 partner full-width valign">
+    <a href="http://eurotux.com" target="blank"><img src="img/org/polimeros.png"></a>
   </div>
 </div>
