main logo updated. org: still missing urls

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -7,21 +7,21 @@ fa-icon: users
 
 <div class="row partners">
   <div class="col s12 partner valign">
-    <a href="http://subvisual.co" target="blank"><img src="img/org/cesium.png"/></a>
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/cesium.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://eurotux.com" target="blank"><img src="img/org/aiesec.png"/></a>
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/aiesec.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://eurotux.com" target="blank"><img src="img/org/NAMecUM.png"/></a>
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/NAMecUM.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://eurotux.com" target="blank"><img src="img/org/NEEGIUM.png"/></a>
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/NEEGIUM.png"/></a>
   </div>
   <div class="col s12 partner valign">
-    <a href="http://eurotux.com" target="blank"><img src="img/org/netium.png"/></a>
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/netium.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://eurotux.com" target="blank"><img src="img/org/polimeros.png"></a>
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/polimeros.png"></a>
   </div>
 </div>
