org section updated

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -24,4 +24,16 @@ icon: org.png
   <div class="col s12 partner full-width valign">
     <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/polimeros.png"></a>
   </div>
+  <div class="col s12 partner  valign">
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/ADAEUM.png"></a>
+  </div>
+  <div class="col s12 partner  valign">
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/NEDUM.png"></a>
+  </div>
+  <div class="col s12 partner full-width valign">
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/neebum.png"></a>
+  </div>
+  <div class="col s12 partner full-width valign">
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/nemum.png"></a>
+  </div>
 </div>
