updated organization section

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -10,30 +10,30 @@ icon: org.png
     <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/cesium.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/aiesec.png"/></a>
+    <a href="http://aiesec.pt//" target="blank"><img src="img/org/aiesec.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/NAMecUM.png"/></a>
+    <a href="https://www.facebook.com/NAMecUM/" target="blank"><img src="img/org/NAMecUM.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/NEEGIUM.png"/></a>
+    <a href="https://www.facebook.com/NEEGIUM/" target="blank"><img src="img/org/NEEGIUM.png"/></a>
   </div>
   <div class="col s12 partner valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/netium.png"/></a>
+    <a href="https://www.facebook.com/netiuminho/" target="blank"><img src="img/org/netium.png"/></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/polimeros.png"></a>
+    <a href="https://www.facebook.com/neep.uminho/" target="blank"><img src="img/org/polimeros.png"></a>
   </div>
-  <div class="col s12 partner  valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/ADAEUM.png"></a>
+  <div class="col s12 partner valign">
+    <a href="https://www.facebook.com/debatesuminho/" target="blank"><img src="img/org/ADAEUM.png"></a>
   </div>
-  <div class="col s12 partner  valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/NEDUM.png"></a>
-  </div>
-  <div class="col s12 partner full-width valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/neebum.png"></a>
+  <div class="col s12 partner valign">
+    <a href="https://www.facebook.com/nucleoed/" target="blank"><img src="img/org/NEDUM.png"></a>
   </div>
   <div class="col s12 partner full-width valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/nemum.png"></a>
+    <a href="https://www.facebook.com/Neebum-121385298045015/" target="blank"><img src="img/org/neebum.png"></a>
+  </div>
+  <div class="col s12 partner full-width valign">
+    <a href="https://www.facebook.com/NEMUM" target="blank"><img src="img/org/nemum.png"></a>
   </div>
 </div>
