added neoum logo

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -36,4 +36,7 @@ icon: org.png
   <div class="col s12 partner full-width valign">
     <a href="https://www.facebook.com/NEMUM" target="blank"><img src="img/org/nemum.png"></a>
   </div>
+  <div class="col s12 partner full-width valign">
+    <a href="https://www.facebook.com/neouminho" target="blank"><img src="img/org/neoum.png"></a>
+  </div>
 </div>
