added elsa activity

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -39,4 +39,7 @@ icon: org.png
   <div class="col s12 partner full-width valign">
     <a href="https://www.facebook.com/neouminho" target="blank"><img src="img/org/neoum.png"></a>
   </div>
+  <div class="col s12 partner full-width valign">
+    <a href="https://www.facebook.com/elsauminho/" target="blank"><img src="img/org/elsa.png"></a>
+  </div>
 </div>
