make organization using data variabels, separate organization into two parts

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -5,41 +5,23 @@ color: white
 icon: org.png
 ---
 
-<div class="row partners">
-  <div class="col s12 partner valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img src="img/org/cesium.png"/></a>
+# Organização
+
+<div class="row partners organization">
+{% for partner in site.data.organization %}
+  <div class="col s12 partner {% if full-width %}full-width{% endif %} valign">
+    <a href="{{ partner.site }}" target="blank"><img src="img/org/{{ partner.logo-image }}"/></a>
   </div>
-  <div class="col s12 partner full-width valign">
-    <a href="http://aiesec.pt//" target="blank"><img src="img/org/aiesec.png"/></a>
+{% endfor %}
+</div>
+
+
+### Parceiros
+
+<div class="row partners supporters">
+{% for partner in site.data.partners %}
+  <div class="col s7 partner {% if full-width %}full-width{% endif %} valign">
+    <a href="{{ partner.site }}" target="blank"><img src="img/org/{{ partner.logo-image }}"/></a>
   </div>
-  <div class="col s12 partner full-width valign">
-    <a href="https://www.facebook.com/NAMecUM/" target="blank"><img src="img/org/NAMecUM.png"/></a>
-  </div>
-  <div class="col s12 partner full-width valign">
-    <a href="https://www.facebook.com/NEEGIUM/" target="blank"><img src="img/org/NEEGIUM.png"/></a>
-  </div>
-  <div class="col s12 partner valign">
-    <a href="https://www.facebook.com/netiuminho/" target="blank"><img src="img/org/netium.png"/></a>
-  </div>
-  <div class="col s12 partner full-width valign">
-    <a href="https://www.facebook.com/neep.uminho/" target="blank"><img src="img/org/polimeros.png"></a>
-  </div>
-  <div class="col s12 partner valign">
-    <a href="https://www.facebook.com/debatesuminho/" target="blank"><img src="img/org/ADAEUM.png"></a>
-  </div>
-  <div class="col s12 partner valign">
-    <a href="https://www.facebook.com/nucleoed/" target="blank"><img src="img/org/NEDUM.png"></a>
-  </div>
-  <div class="col s12 partner full-width valign">
-    <a href="https://www.facebook.com/Neebum-121385298045015/" target="blank"><img src="img/org/neebum.png"></a>
-  </div>
-  <div class="col s12 partner full-width valign">
-    <a href="https://www.facebook.com/NEMUM" target="blank"><img src="img/org/nemum.png"></a>
-  </div>
-  <div class="col s12 partner full-width valign">
-    <a href="https://www.facebook.com/neouminho" target="blank"><img src="img/org/neoum.png"></a>
-  </div>
-  <div class="col s12 partner full-width valign">
-    <a href="https://www.facebook.com/elsauminho/" target="blank"><img src="img/org/elsa.png"></a>
-  </div>
+{% endfor %}
 </div>
