breaks organization into sperate areas

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -5,7 +5,7 @@ color: white
 icon: org.png
 ---
 
-# Organização
+# Parceiros com Atividades:
 
 <div class="row partners organization">
 {% for partner in site.data.organization %}
@@ -16,7 +16,7 @@ icon: org.png
 </div>
 
 
-### Parceiros
+## Parceiros sem Atividades:
 
 <div class="row partners supporters">
 {% for partner in site.data.partners %}
@@ -25,3 +25,6 @@ icon: org.png
   </div>
 {% endfor %}
 </div>
+
+## Com o Apoio de:
+  <a href="https://www.sas.uminho.pt/" target="blank"><img class="apoio" width="350" src="img/org/sasum.png"/></a>
