--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -5,26 +5,16 @@ color: white
 icon: org.png
 ---
 
-# Parceiros com Atividades:
-
 <div class="row partners organization">
+  <div class="col s12 partner full-width valign">
+    <a href="http://cesium.di.uminho.pt/" target="blank"><img width="500px" src="img/org/cesium.png"/></a>
+  </div>
+</div>
+
+<div class="row partners organization login-img">
 {% for partner in site.data.organization %}
   <div class="col s12 partner {% if full-width %}full-width{% endif %} valign">
     <a href="{{ partner.site }}" target="blank"><img src="img/org/{{ partner.logo-image }}"/></a>
   </div>
 {% endfor %}
 </div>
-
-
-## Parceiros sem Atividades:
-
-<div class="row partners supporters">
-{% for partner in site.data.partners %}
-  <div class="col s7 partner {% if full-width %}full-width{% endif %} valign">
-    <a href="{{ partner.site }}" target="blank"><img src="img/org/{{ partner.logo-image }}"/></a>
-  </div>
-{% endfor %}
-</div>
-
-## Com o Apoio de:
-  <a href="https://www.sas.uminho.pt/" target="blank"><img class="apoio" width="350" src="img/org/sasum.png"/></a>
