resize square logos

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -5,15 +5,9 @@ color: white
 icon: org.png
 ---
 
-<div class="row partners organization">
-  <div class="col s12 partner full-width valign">
-    <a href="http://cesium.di.uminho.pt/" target="blank"><img width="500px" src="img/org/cesium.png"/></a>
-  </div>
-</div>
-
-<div class="row partners organization login-img">
+<div class="row">
 {% for partner in site.data.organization %}
-  <div class="col s12 partner {% if full-width %}full-width{% endif %} valign">
+  <div class="col m6 partner {% if full-width %}full-width{% endif %} valign">
     <a href="{{ partner.site }}" target="blank"><img src="img/org/{{ partner.logo-image }}"/></a>
   </div>
 {% endfor %}
