--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -5,9 +5,15 @@ color: white
 icon: org.png
 ---
 
+<div class="col m8 partner full-width valign">
+  <a href="{{ partner.site }}" target="blank"><img src="img/org/cesium.png"/></a>
+</div>
+
+<br>
+
 <div class="row">
 {% for partner in site.data.organization %}
-  <div class="col m6 partner {% if full-width %}full-width{% endif %} valign">
+  <div class="col m4 partner {% if full-width %}full-width{% endif %} valign">
     <a href="{{ partner.site }}" target="blank"><img src="img/org/{{ partner.logo-image }}"/></a>
   </div>
 {% endfor %}
