reorganize img folder

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -6,7 +6,7 @@ icon: org.png
 ---
 
 <div class="col m8 partner full-width valign">
-  <a href="{{ partner.site }}" target="blank"><img src="img/org/cesium.png"/></a>
+  <a href="{{ partner.site }}" target="blank"><img src="img/organization/cesium.png"/></a>
 </div>
 
 <br>
@@ -14,7 +14,7 @@ icon: org.png
 <div class="row">
 {% for partner in site.data.organization %}
   <div class="col m4 partner {% if full-width %}full-width{% endif %} valign">
-    <a href="{{ partner.site }}" target="blank"><img src="img/org/{{ partner.logo-image }}"/></a>
+    <a href="{{ partner.site }}" target="blank"><img src="img/organization/{{ partner.logo-image }}"/></a>
   </div>
 {% endfor %}
 </div>
