--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -5,15 +5,17 @@ color: white
 icon: org.png
 ---
 
-<div class="col m8 partner full-width valign">
+
+<div class="responsive-img" style="max-width: 700px;margin:auto;">
   <a href="{{ partner.site }}" target="blank"><img src="img/organization/cesium.png"/></a>
 </div>
 
 <br>
 
+
 <div class="row">
 {% for partner in site.data.organization %}
-  <div class="col m4 partner {% if full-width %}full-width{% endif %} valign">
+  <div class="col m3 partner {% if full-width %}full-width{% endif %} valign">
     <a href="{{ partner.site }}" target="blank"><img src="img/organization/{{ partner.logo-image }}"/></a>
   </div>
 {% endfor %}
