--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -15,7 +15,7 @@ icon: org.png
 
 <div class="row">
 {% for partner in site.data.organization %}
-  <div class="col m3 partner {% if full-width %}full-width{% endif %} valign">
+  <div class="col s3 partner {% if full-width %}full-width{% endif %} valign">
     <a href="{{ partner.site }}" target="blank"><img src="img/organization/{{ partner.logo-image }}"/></a>
   </div>
 {% endfor %}
