fixed organization and partners logos - desktop && mobile

--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -13,10 +13,19 @@ icon: org.png
 <br>
 
 
-<div class="row">
+<div class="row organization img-desktop">
 {% for partner in site.data.organization %}
-  <div class="col s3 partner {% if full-width %}full-width{% endif %} valign">
+  <div class="col s3 partner valign">
     <a href="{{ partner.site }}" target="blank"><img src="img/organization/{{ partner.logo-image }}"/></a>
   </div>
 {% endfor %}
 </div>
+
+<div class="row partners organization img-mobile">
+{% for partner in site.data.organization %}
+  <div class="col s12 partner {% if full-width %}full-width{% endif %} valign">
+    <a href="{{ partner.site }}" target="blank"><img src="img/organization/{{ partner.logo-image }}"/></a>
+  </div>
+{% endfor %}
+</div>
+
