--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -7,7 +7,7 @@ icon: org.png
 
 
 <div class="responsive-img" style="max-width: 700px;margin:auto;">
-  <a href="{{ partner.site }}" target="blank"><img src="img/organization/cesium.png"/></a>
+  <a href="http://www.cesium.di.uminho.pt/" target="blank"><img src="img/organization/cesium.png"/></a>
 </div>
 
 <br>
