--- a/_posts/2000-01-08-contacts.md
+++ b/_posts/2000-01-08-contacts.md
@@ -12,8 +12,7 @@ icon: org.png
 
 <br>
 
-<!--
-<div class="row organization img-desktop">
+<div class="row organization img-desktop" style="margin-bottom: 80px">
 {% for partner in site.data.organization %}
   <div class="col s3 partner valign">
     <a href="{{ partner.site }}" target="blank"><img src="img/organization/{{ partner.logo-image }}"/></a>
@@ -28,5 +27,3 @@ icon: org.png
   </div>
 {% endfor %}
 </div>
-
--->
