--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,6 +5,6 @@ color: white
 style: center
 ---
 
-![dezembro_solidario](img/logo.png)
+<img src="img/logo.png" width="600" />
 
-### Dezembro 2020 @ Universidade do Minho
+### Dezembro Solidário 2020 @ Universidade do Minho
