--- a/_posts/2000-01-09-contacts.md
+++ b/_posts/2000-01-09-contacts.md
@@ -14,8 +14,8 @@ icon: org.png
 
 <div class="row organization img-desktop" style="margin-bottom: 100px">
 {% for partner in site.data.organization %}
-  <div class="col s4 partner valign">
-    <a href="{{ partner.site }}" target="blank"><img src="img/organization/{{ partner.logo-image }}"/></a>
+  <div class="col s3 partner valign" style="height: 100px; position: relative;">
+    <a href="{{ partner.site }}" target="blank"><img src="img/organization/{{ partner.logo-image }}" style="margin: auto; max-height:100px;"/></a>
   </div>
 {% endfor %}
 </div>
